force-app/main/default/objects/Milestone_Forecast__c/Milestone_Forecast__c.object-meta.xml
<CustomObject>
    <description>Salesforce.com Change Request: NICC-010123
Object is used for Project Manager revenue forecasting.</description>
    <label>Milestone Forecast</label>
    <nameField>
        <displayFormat>MF-{000}</displayFormat>
        <label>Milestone Forecast Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Milestone Forecasts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>