force-app/main/default/objects/Milestone_Forecast__c/fields/Commit__c.field-meta.xml
<CustomField>
    <fullName>Commit__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Once checked the forecast will appear on forecasting reports</description>
    <inlineHelpText>Select once forecast is ready to be added to forecasting reports</inlineHelpText>
    <label>Commit?</label>
    <type>Checkbox</type>
</CustomField>