force-app/main/default/objects/Milestone_Forecast__c/fields/Commit_Date__c.field-meta.xml
<CustomField>
    <fullName>Commit_Date__c</fullName>
    <description>Auto-populated when the commit? checkbox has been selected</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Auto-populated when the commit? checkbox has been selected</inlineHelpText>
    <label>Commit Date</label>
    <type>Date</type>
</CustomField>