force-app/main/default/objects/Milestone_Forecast__c/fields/Forecast_Date__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Date__c</fullName>
    <description>Forecast date when milestone revenue will be recognized</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Enter the forecast date for when milestone revenue will be recognized</inlineHelpText>
    <label>Forecast Date</label>
    <type>Date</type>
</CustomField>