force-app/main/default/objects/Milestone_Forecast__c/fields/Forecast_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Outcome__c</fullName>
    <description>Formula used to determine accuracy of forecast</description>
    <formula>IF ( AND( ISBLANK( Milestone__r.Target_Period__c ),Forecast_Date__c  &gt;=  TODAY()), &quot;On Target&quot;,

   IF ( AND (RIGHT(Milestone__r.Target_Period__c,2) =  RIGHT(Forecast_Period__c,2), 
   MID (Milestone__r.Target_Period__c,4,4) = MID (Forecast_Period__c,4,4),  Milestone_Target_Date__c  &lt; TODAY()) , 
   &quot;On Target&quot;,

   IF ( AND (VALUE(RIGHT(Milestone__r.Target_Period__c,2)) &lt;  VALUE(RIGHT(Forecast_Period__c,2)), 
   MID (Milestone__r.Target_Period__c,4,4)  = MID (Forecast_Period__c,4,4),  Milestone_Target_Date__c  &lt;  
   TODAY()) , &quot;Before Target&quot;, 

&quot;Pass Target&quot;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Formula used to determine accuracy of forecast</inlineHelpText>
    <label>Forecast Outcome</label>
    <type>Text</type>
</CustomField>