force-app/main/default/objects/Milestone_Forecast__c/fields/Forecast_Period__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Period__c</fullName>
    <description>Auto-populated to show what period the forecast date falls into</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>No action needed.  Field is auto-populated to show what period the forecast date falls into</inlineHelpText>
    <label>Forecast Period</label>
    <length>16</length>
    <type>Text</type>
</CustomField>