force-app/main/default/objects/Milestone_Forecast__c/fields/Milestone__c.field-meta.xml
<CustomField>
    <fullName>Milestone__c</fullName>
    <description>Milestone associated with forecast</description>
    <label>Milestone</label>
    <referenceTo>pse__Milestone__c</referenceTo>
    <relationshipLabel>Milestone Forecasts</relationshipLabel>
    <relationshipName>Milestone_Forecasts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>