force-app/main/default/objects/Milestone_Forecast__c/fields/Milestone_Target_Date__c.field-meta.xml
<CustomField>
    <fullName>Milestone_Target_Date__c</fullName>
    <description>The target date of the associated milestone</description>
    <formula>Milestone__r.pse__Target_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Auto-populated from the associated milestone target date.</inlineHelpText>
    <label>Milestone Target Date</label>
    <type>Date</type>
</CustomField>