force-app/main/default/objects/Milestone_Forecast__c/fields/Override_Commit__c.field-meta.xml
<CustomField>
    <fullName>Override_Commit__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If a committed forecast needs to be override, the PM will select the box &amp; the record no longer be included on the forecast.  This will allow for accurate reporting of PM accuracy % and accurate forecast information.</description>
    <inlineHelpText>If a committed forecast needs to be override, the PM will select the box &amp; the record no longer be included on the forecast.  This will allow for accurate reporting of PM accuracy % and accurate forecast information.</inlineHelpText>
    <label>Override Commit</label>
    <type>Checkbox</type>
</CustomField>