force-app/main/default/objects/Milestone_Forecast__c/fields/Project_Manager__c.field-meta.xml
<CustomField>
    <fullName>Project_Manager__c</fullName>
    <description>Populates the Project Manager name from the Project Object</description>
    <formula>Milestone__r.pse__Project__r.pse__Project_Manager__r.FirstName + &quot; &quot; +  Milestone__r.pse__Project__r.pse__Project_Manager__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Auto-populated field from the Project Manager field on the Project</inlineHelpText>
    <label>Project Manager</label>
    <type>Text</type>
</CustomField>