force-app/main/default/objects/Milestone_Forecast__c/validationRules/Project_Change_After_Commit.validationRule-meta.xml
<ValidationRule>
    <fullName>Project_Change_After_Commit</fullName>
    <active>true</active>
    <description>Besides the Project Office, no changes can be made to the Project Name once the Commit? flag has been selected.</description>
    <errorConditionFormula>AND(ISCHANGED( Project__c ) ,  Commit__c  = true, AND($Profile.Name != &quot;NI PSA Administrator&quot;,$Profile.Name != &quot;System Administrator&quot;))</errorConditionFormula>
    <errorMessage>No changes to the Project are allowed if the Commit field had previously been selected and. If this record is no longer valid, select the Override Commit checkbox to remove record from the forecast.</errorMessage>
</ValidationRule>