force-app/main/default/objects/Milestone_Forecast__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Project_Manager__c</columns>
    <columns>Forecast_Date__c</columns>
    <columns>Forecast_Period__c</columns>
    <columns>Commit__c</columns>
    <columns>Milestone__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <sharedTo>
        <roleAndSubordinates>ClientServices</roleAndSubordinates>
    </sharedTo>
</ListView>