force-app/main/default/objects/Milestone_Forecast__c/listViews/My_Active_Forecasts.listView-meta.xml
<ListView>
    <fullName>My_Active_Forecasts</fullName>
    <columns>NAME</columns>
    <columns>Project__c</columns>
    <columns>Milestone__c</columns>
    <columns>Milestone_Target_Date__c</columns>
    <columns>Forecast_Date__c</columns>
    <columns>Override_Commit__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Project_Manager__c</field>
        <operation>equals</operation>
        <value>Mary Dugdale</value>
    </filters>
    <filters>
        <field>Forecast_Date__c</field>
        <operation>greaterOrEqual</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>Commit__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Override_Commit__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>My Active Forecasts</label>
</ListView>