force-app/main/default/objects/Milestone_Forecast__c/listViews/My_Forecasts.listView-meta.xml
<ListView>
    <fullName>My_Forecasts</fullName>
    <columns>NAME</columns>
    <columns>Project__c</columns>
    <columns>Milestone__c</columns>
    <columns>Forecast_Date__c</columns>
    <columns>Commit__c</columns>
    <columns>Commit_Date__c</columns>
    <columns>Milestone_Target_Date__c</columns>
    <columns>Forecast_Outcome__c</columns>
    <columns>Forecast_Period__c</columns>
    <filterScope>Mine</filterScope>
    <label>My Forecasts</label>
</ListView>